--- a/src/assets/styles/base.css
+++ b/src/assets/styles/base.css
@@ -1,17 +1,9 @@
+html,
 body,
-html {
+#app {
+  height: 100%; 
   margin: 0;
   padding: 0;
-  height: 100%;
-  overflow-x: hidden;
-  /* 防止水平滚动*/
-
-}
-
-html {
   font-size: 12px;
-}
-
-body {
   background-color: #F7F8FC;
 }
