--- a/src/assets/styles/base.css
+++ b/src/assets/styles/base.css
@@ -1,9 +1,9 @@
 html,
 body,
 #app {
-  height: 100%; 
+  height: 100%;
   margin: 0;
   padding: 0;
   font-size: 12px;
-  background-color: #F7F8FC;
+  background-color: #f7f8fc;
 }
